# lock-ime

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
PSD/: lock-ime-logo.psd
img/: lock-ime-logo.psd
src/: autostart.rs  config.rs  events.rs  keyboard.rs  lang.rs  main.rs  settings_window.rs  state.rs  tray.rs
src/ime/: imm32.rs  mod.rs  tsf.rs
